--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
+    "@codemirror/lang-sql": "^6.6.4",
     "@docusaurus/core": "^2.4.3",
     "@docusaurus/preset-classic": "^2.4.3",
     "@docusaurus/theme-mermaid": "^2.4.3",
     "@docusaurus/theme-search-algolia": "^2.4.3",
     "@easyops-cn/docusaurus-search-local": "^0.36.0",
     "@mdx-js/react": "^1.6.22",
+    "@uiw/react-codemirror": "^4.22.2",
+    "axios": "^1.7.2",
     "clsx": "^1.2.1",
     "docusaurus-plugin-image-zoom": "^1.0.1",
     "prism-react-renderer": "^1.3.5",
