--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prism-react-renderer": "^2.3.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^5.3.0",
     "react-player": "^2.16.0"
   },
   "devDependencies": {
