--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -43,3 +43,14 @@ zedach:
     github: zedach
     linkedin: dachraoui
 
+
+mkassir:
+  name: Mohamad Kassir
+  title: Starlake Core Team
+  url: https://www.linkedin.com/in/mohamad-kassir/
+  image_url: http://gravatar.com/avatar/853d447258b0cca20a91b1ead5370b84
+  socials:
+    github: mhdkassir
+    linkedin: mohamad-kassir
+
+
