--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^5.3.0",
+    "react-lite-youtube-embed": "^2.5.1",
     "react-player": "^2.16.0"
   },
   "devDependencies": {
