Implement guides section in the sidebar and update quickstart data generation scripts. Remove outdated quickstart markdown files for AWS, Azure, BigQuery, Databricks, GCP, and Snowflake. Refactor package.json scripts to generate guides data instead of quickstart data, enhancing maintainability and consistency across documentation.

--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "node scripts/generate-quickstart-data.js && docusaurus start",
-    "build": "node scripts/generate-quickstart-data.js && docusaurus build",
+    "start": "node scripts/generate-guides-data.js && docusaurus start",
+    "build": "node scripts/generate-guides-data.js && docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "generate-quickstart-data": "node scripts/generate-quickstart-data.js"
+    "generate-guides-data": "node scripts/generate-guides-data.js"
   },
   "dependencies": {
     "@codemirror/lang-sql": "^6.6.4",
