--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-lite-youtube-embed": "^2.5.1",
     "react-markdown": "^10.1.0",
     "react-player": "^2.16.0",
-    "react-router-dom": "6"
+    "react-router-dom": "6",
+    "rehype-raw": "^7.0.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.8.1",
